# XLeRobot

./: pyproject.toml
XLeVR/xlevr/: config.py  utils.py
XLeVR/xlevr/inputs/: base.py  vr_ws_server.py
docs/: ManiSkill_Alternatives_Research.md  generate_robot_docs.py  generate_task_docs.py  macOS_Installation_Guide.md
docs/en/source/: conf.py
docs/zh/source/: conf.py
simulation/Maniskill/agents/xlerobot/: xlerobot.py
simulation/Maniskill/envs/scenes/: base_env.py
simulation/Maniskill/examples/: demo_ctrl_action.py  demo_ctrl_action_ee_VR.py
simulation/mujoco/: requirements.txt  xlerobot_mujoco.py
software/examples/: 0_so100_keyboard_joint_control.py  1_so100_keyboard_ee_control.py  2_dual_so100_keyboard_ee_control.py
software/joyconrobotics/: __init__.py  constants.py  device.py  event.py  gyro.py  joycon.py  joyconrobotics.py  wrappers.py
software/src/model/: SO101Robot.py
software/src/robots/xlerobot/: __init__.py  config_xlerobot.py  xlerobot.py  xlerobot_client.py  xlerobot_host.py
web_control/server/: main.py
web_control/server/api/: __init__.py  streaming.py
web_control/server/core/: __init__.py  config.py  protocol.py  remote_core.py
