[project]
name = "xlerobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "lerobot[all]>=0.3.2",
    "mani-skill==3.0.0b21",
    "mujoco",
    "mujoco-python-viewer",
    "opencv-python>=4.11.0.86",
    "pynput>=1.8.1",
    "pyserial>=3.5",
    "sapien==3.0.0b21",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "torchvision>=0.23.0",
]
